Finalisation du projet Calculatrice

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <script src="/js/variables.js"></script>
     <script src="/js/fonctions.js"></script>
     <script src="/js/conditions.js"></script>
+    <script src="/js/Boucles.js"></script>
+    <script src="js/Erreurs.js"></script>
 
 <!--Les exercices-->
     <script src="/js/Exercices/numero 1/Debutant.js"></script>
     <script src="/js/Exercices/numero 1/Avance.js"></script>
+    <script src="/js/Exercices/Projet/Calculatrice.js"></script>
 
 <div>
     
