Ajout des cours sur les tableaux

--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 <body>
 
  <!--Les cours-->
-    <script src="/js/variables.js"></script>
-    <script src="/js/fonctions.js"></script>
-    <script src="/js/conditions.js"></script>
+    <script src="/js/Variables.js"></script>
+    <script src="/js/Fonctions.js"></script>
+    <script src="/js/Conditions.js"></script>
     <script src="/js/Boucles.js"></script>
     <script src="js/Erreurs.js"></script>
+    <script src="/js/Tableaux.js"></script>
 
 <!--Les exercices-->
     <script src="/js/Exercices/numero 1/Debutant.js"></script>
     <script src="/js/Exercices/numero 1/Avance.js"></script>
     <script src="/js/Exercices/Projet/Calculatrice.js"></script>
+    <script src="/js/Exercices/Numero 1/Fonctions_recursives.js"></script>
 
 <div>
     
