creation du cours Objets

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <script src="/js/Fonctions.js"></script>
     <script src="/js/Conditions.js"></script>
     <script src="/js/Boucles.js"></script>
-    <script src="js/Erreurs.js"></script>
+    <script src="/js/Erreurs.js"></script>
     <script src="/js/Tableaux.js"></script>
+    <script src="/js/Objets.js"></script>
 
 <!--Les exercices-->
     <script src="/js/Exercices/numero 1/Debutant.js"></script>
