mise a jour global

--- a/index.html
+++ b/index.html
@@ -9,23 +9,39 @@
 </head>
 <body>
 
+    <header>
+        <div id="logo">
+          <img src="https://believemy.com/uploads/13a7a587cbbf4ea37a399419607ffde6_b550bd9a57151726042adeb3d8166d18.png" alt="logo" />
+        </div>
+      </header>
+      <div class="container">
+        <h1>Bienvenue sur mon site !</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div id="a-supprimer" class="alert alert-danger m-4">Ceci est un élément à supprimer grâce à JavaScript.</div>
+
+
+
+
  <!--Les cours-->
-    <script src="/js/Variables.js"></script>
-    <script src="/js/Fonctions.js"></script>
-    <script src="/js/Conditions.js"></script>
-    <script src="/js/Boucles.js"></script>
-    <script src="/js/Erreurs.js"></script>
-    <script src="/js/Tableaux.js"></script>
-    <script src="/js/Objets.js"></script>
+    <script src="/js/Cours/Global.js"></script>
+    <script src="/js/Cours/Variables.js"></script>
+    <script src="/js/Cours/Fonctions.js"></script>
+    <script src="/js/Cours/Conditions.js"></script>
+    <script src="/js/Cours/Boucles.js"></script>
+    <script src="/js/Cours/Erreurs.js"></script>
+    <script src="/js/Cours/Tableaux.js"></script>
+    <script src="/js/Cours/Objets.js"></script>
+    <script src="/js/Cours/BOM.js"></script>
+    <script src="/js/Cours/DOM.js"></script>
+    <script src="/js/Cours/Evenements.js"></script>
 
 <!--Les exercices-->
-    <script src="/js/Exercices/numero 1/Debutant.js"></script>
-    <script src="/js/Exercices/numero 1/Avance.js"></script>
+    <script src="/js/Exercices/Debutant.js"></script>
+    <script src="/js/Exercices/Avance.js"></script>
     <script src="/js/Exercices/Projet/Calculatrice.js"></script>
-    <script src="/js/Exercices/Numero 1/Fonctions_recursives.js"></script>
-
-<div>
-    
-</div>
+    <script src="/js/Exercices/Fonctions_recursives.js"></script>
+    <script src="/js/Exercices/Le_dom.js"></script>
 </body>
 </html>
