ajout du cours POO

--- a/index.html
+++ b/index.html
@@ -16,12 +16,29 @@
       </header>
       <div class="container">
         <h1>Bienvenue sur mon site !</h1>
+
+        <div>
+          <p>FAIRE EXERCICE 124</p>
+          <p>FAIRE LE PROJET SECTION 21 - 126</p>
+          <p>FAIRE LE PROJET SECTION 22 - 134</p>
+        </div>
+
+
+
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
       <div id="a-supprimer" class="alert alert-danger m-4">Ceci est un élément à supprimer grâce à JavaScript.</div>
-
-
+      <br><br>
+      <a href="#">Supprimer cet article</a>
+      <button>Passez au-dessus de moi</button>
+      <br><br>
+      <article style="background-color: silver">
+        <h1 style="display: inline">Titre de l'article</h1>
+      </article>
+      <br><br>
+      <button class="timer">Lancer le decompte</button>
+      <br>
 
 
  <!--Les cours-->
@@ -36,6 +53,7 @@
     <script src="/js/Cours/BOM.js"></script>
     <script src="/js/Cours/DOM.js"></script>
     <script src="/js/Cours/Evenements.js"></script>
+    <script src="/js/Cours/POO.js"></script>
 
 <!--Les exercices-->
     <script src="/js/Exercices/Debutant.js"></script>
@@ -43,5 +61,6 @@
     <script src="/js/Exercices/Projet/Calculatrice.js"></script>
     <script src="/js/Exercices/Fonctions_recursives.js"></script>
     <script src="/js/Exercices/Le_dom.js"></script>
+    <script src="/js/Exercices/Timer.js"></script>
 </body>
 </html>
