Ajout du projet Juste Prix

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
       </article>
       <br><br>
       <button class="timer">Lancer le decompte</button>
-      <br>
+      <br><br>
+      <button class="spoiler">Afficher</button>
+      <p></p>
 
 
  <!--Les cours-->
@@ -57,10 +59,17 @@
 
 <!--Les exercices-->
     <script src="/js/Exercices/Debutant.js"></script>
-    <script src="/js/Exercices/Avance.js"></script>
-    <script src="/js/Exercices/Projet/Calculatrice.js"></script>
+    <script src="/js/Exercices/Avance.js"></script>   
     <script src="/js/Exercices/Fonctions_recursives.js"></script>
     <script src="/js/Exercices/Le_dom.js"></script>
     <script src="/js/Exercices/Timer.js"></script>
+    <script src="/js/Exercices/Spoiler.js"></script>
+
+
+    <!--Les projets-->
+    <script src="/projets/Calculatrice/Calculatrice.js"></script>
+    
+    
+
 </body>
 </html>
