Ajout du dossier test

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <script src="/js/Cours/BOM.js"></script>
     <script src="/js/Cours/DOM.js"></script>
     <script src="/js/Cours/Evenements.js"></script>
-    <script src="/js/Cours/POO.js"></script>
+    <script src="/js/Cours/POO/Objet_Literal.js"></script>
 
 <!--Les exercices-->
     <script src="/js/Exercices/Debutant.js"></script>
