Ajout du projet Fight Simulator

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
     <script src="/js/Cours/DOM.js"></script>
     <script src="/js/Cours/Evenements.js"></script>
     <script src="/js/Cours/POO/Objet_Literal.js"></script>
+    <script src="/js/Cours/POO/Prototype.js"></script>
+    <script src="/js/Cours/POO/Classes.js"></script>
+    <script src="/js/Cours/Date.js"></script>
 
 <!--Les exercices-->
     <script src="/js/Exercices/Debutant.js"></script>
