--- a/index.html
+++ b/index.html
@@ -15,16 +15,7 @@
         </div>
       </header>
       <div class="container">
-        <h1>Bienvenue sur mon site !</h1>
-
-        <div>
-          <p>FAIRE EXERCICE 124</p>
-          <p>FAIRE LE PROJET SECTION 21 - 126</p>
-          <p>FAIRE LE PROJET SECTION 22 - 134</p>
-        </div>
-
-
-
+        <h1>Bienvenue sur mon site !</h1>        
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
@@ -59,10 +50,12 @@
     <script src="/js/Cours/POO/Prototype.js"></script>
     <script src="/js/Cours/POO/Classes.js"></script>
     <script src="/js/Cours/Date.js"></script>
+    <script src="/js/Cours/API.js"></script>
+    <script src="/js/Cours/Asynchrone.js"></script>
 
 <!--Les exercices-->
     <script src="/js/Exercices/Debutant.js"></script>
-    <script src="/js/Exercices/Avance.js"></script>   
+    <script src="/js/Exercices/IMC.js"></script>   
     <script src="/js/Exercices/Fonctions_recursives.js"></script>
     <script src="/js/Exercices/Le_dom.js"></script>
     <script src="/js/Exercices/Timer.js"></script>
