--- a/projets/Citations/citations.html
+++ b/projets/Citations/citations.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -37,4 +37,4 @@
 
 <script src="/projets/Citations/Citations.js"></script>
 </body>
-</html>
+</html> -->
